Modernise - java 21